const { DataTypes } = require('sequelize');
const sequelize = require('../config/database');
const bcrypt = require('bcrypt');

const User = sequelize.define('User', {
    username: {
        type: DataTypes.STRING,
        allowNull: false,
    },
    email: {
        type: DataTypes.STRING,
        allowNull: false,
        unique: true,
    },
    password: {
        type: DataTypes.STRING,
        allowNull: false,
    },
    role: {
        type: DataTypes.ENUM('Admin', 'User'),
        allowNull: false,
    },
    isSubscribedToNewsletter: {
        type: DataTypes.BOOLEAN,
        defaultValue: false,
    },
    isEmailVerified: {
        type: DataTypes.BOOLEAN,
        defaultValue: false,
    },
    emailVerificationToken: {
        type: DataTypes.STRING,
        allowNull: true,
    },
    bio: {
        type: DataTypes.TEXT,
        allowNull: true,
    },
    profilePicture: {
        type: DataTypes.STRING, // URL ou chemin du fichier
        allowNull: true,
    },
}, {
    timestamps: true,
    paranoid: true, // Enables soft delete
});

User.addHook('beforeCreate', async (user, options) => {
    if (user.password) {
        const salt = await bcrypt.genSalt(10);
        user.password = await bcrypt.hash(user.password, salt);
    }
});

User.addHook('beforeUpdate', async (user, options) => {
    if (user.changed('password')) {
        const salt = await bcrypt.genSalt(10);
        user.password = await bcrypt.hash(user.password, salt);
    }
});

User.prototype.downloadData = function() {
    // Logic to download user data
    console.log(`Downloading data for user: ${this.username}`);
};

module.exports = User;
